2008-09-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gtk/gtkfilesystem.c: use the correct gi18n header.
	Fixes bug #553000.

2008-09-20  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkfilechooserbutton.c (filter_model_visible_func): Don't
	leak a GFile.

2008-09-19  Christian Persch  <chpe@gnome.org>

	Bug 552837 – mem leak in gtkimmulticontext

	* gtk/gtkimmulticontext.c: (gtk_im_multicontext_get_slave): Plug mem
	leak.

2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.14.2 ===

	* NEWS: Updates

2008-09-17  Matthias Clasen  <mclasen@redhat.com>

	Bug 346903 – gtk_enumerate_printers needs events to complete

	* gtk/gtkprintbackend.h:
	* gtk/gtkprintbackend.c: Add a GtkPrintBackend::status property.

	* modules/printbackends/cups/gtkcupsutils.h:
	* modules/printbackends/cups/gtkcupsutils.c: Turn the connection
	test into a tristate available/unavailable/in progress.
	
	* modules/printbackends/cups/gtkprintbackendcups.c: Use a single
	connection test instance for getting the default printer and for
	getting the printer list. Set the GtkPrintBackend::status property
	according to the result of the connection test. Use the printer-type
	attribute to find the default printer, if cups supports it.

	* gtk/gtkprinter.c: When enumerating printers, give up when
	the backend status is 'unavailable'.

	* gtk/gtkprintunixdialog.c (printer_status_cb): Select the printer
	when it is the default and nothing else has been selected yet.

	Patch by Marek Kasik.

2008-09-17  Christian Persch  <chpe@gnome.org>

	Bug 552668 – format not a string literal and no format arguments in
	gtkimmodule

	* gtk/gtkimmodule.c: (gtk_im_module_load): Use %s with g_warning here.

2008-09-17  Christian Persch  <chpe@gnome.org>

	Bug 552667 – gtkimage containing gicon leaks memory

	* gtk/gtkimage.c: (ensure_pixbuf_for_gicon): Fix critical warnings
	when looking up the icon fails. Plug a mem leak.
